<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".QuestionsFragment"
                                                   android:background="#6750A3"
>

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:textSize="48sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionaire" android:layout_margin="8dp"/>
    <Spinner android:layout_width="wrap_content" android:layout_height="48dp"
             android:id="@+id/distanceSpinner"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dSpinnerTitle" android:layout_margin="8dp"/>
    <TextView
            android:text="@string/choose_your_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dSpinnerTitle"
            app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintStart_toStartOf="parent"
            android:textColor="#FFFFFF" android:textSize="20sp" android:layout_margin="8dp"/>
    <TextView
            android:text="@string/how_experienced_are_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/experienceTitle"
            app:layout_constraintTop_toBottomOf="@+id/distanceSpinner" app:layout_constraintStart_toStartOf="parent"
            android:textColor="#FFFFFF" android:textSize="20sp" android:layout_margin="8dp"/>


    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/experienceTitle"
            app:layout_constraintStart_toStartOf="parent"
            >    <RadioButton
        android:text="@string/beginner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/beginnerBut"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/experienceTitle"
        android:layout_margin="8dp"/>
    <RadioButton
            android:text="@string/intermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/intermediateBut"
            app:layout_constraintTop_toBottomOf="@+id/experienceTitle"
            app:layout_constraintEnd_toStartOf="@+id/experiencedBut"
            app:layout_constraintStart_toEndOf="@+id/beginnerBut" android:layout_margin="8dp"/>
    <RadioButton
            android:text="@string/experienced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/experiencedBut"
            app:layout_constraintTop_toBottomOf="@+id/experienceTitle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"/></RadioGroup>
    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/next"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:textSize="20sp"
            android:layout_margin="8dp"/>
    <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_margin="8dp"
            android:text="@string/click_next_to_see_your_workout_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nextInfo"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>